python/testData/skeletons/BinaryStandardModule.py
import binascii
import <error descr="No module named nonexistent">nonexistent</error>


print(binascii, nonexistent)
